<resources>
    <string name="tuiroomkit_app_running">Running</string>
    <string name="tuiroomkit_role_owner">Host</string>
    <string name="tuiroomkit_role_manager">Administrator</string>
    <string name="tuiroomkit_robot">Robot</string>
    <string name="tuiroomkit_copy_room_id_success">Room ID copied successfully.</string>
    <string name="tuiroomkit_tip_exit_first_title">Please exit the current meeting before entering other meetings</string>
    <string name="tuiroomkit_permission_mic_reason_title">%s applies for access to the microphone</string>
    <string name="tuiroomkit_permission_mic_reason">Needs access to your microphone, and it can be used for functions such as Interactive Video Streaming, Show Live, Video Call, Group Video Call, Multi-person audio and video room, etc.</string>
    <string name="tuiroomkit_permission_camera_reason_title">%s applies for camera permission</string>
    <string name="tuiroomkit_permission_camera_reason">Needs access to your camera, and it can be used for functions such as Interactive Video Streaming, Show Live, Video Call, Group Video Call, Multi-person audio and video room, etc. For beauty filters to work, we will collect the facial information captured by your camera in real time to detect your facial features.</string>
    <string name="tuiroomkit_room_room_destroyed">The room was closed.</string>
    <string name="tuiroomkit_tips_start_camera">Please turn on the camera permission first</string>
    <string name="tuiroomkit_tips_start_audio">Please turn on the microphone permission first</string>
    <string name="tuiroomkit_toast_end_room">Conference ended by initiator</string>
    <string name="tuiroomkit_toast_request_repeated">This member has already received the same request, please try again later</string>
    <string name="tuiroomkit_kicked_by_master">You were removed by the room owner.</string>
    <string name="tuiroomkit_you_have_transferred_master">You have transferred the master</string>
    <string name="tuiroomkit_dialog_transfer_owner_title">Transfer the room owner to %s</string>
    <string name="tuiroomkit_dialog_transfer_owner_content">After transfer the room owner, you will become a general user</string>
    <string name="tuiroomkit_dialog_transfer_owner_confirm">Confirm transfer</string>
    <string name="tuiroomkit_toast_transfer_owner_success">The room owner has been transferred to %s</string>
    <string name="tuiroomkit_toast_become_to_owner">You are now a room owner</string>
    <string name="tuiroomkit_mute_all_audio">Mute All</string>
    <string name="tuiroomkit_dialog_mute_all_audio_title">All and new members will be muted</string>
    <string name="tuiroomkit_dialog_mute_all_audio_content">Members will not be able to turn on their microphones</string>
    <string name="tuiroomkit_not_mute_all_audio">UnMute All</string>
    <string name="tuiroomkit_dialog_unmute_all_audio_title">Unmute all</string>
    <string name="tuiroomkit_dialog_unmute_all_audio_content">After being released, the user can freely turn on the microphone</string>
    <string name="tuiroomkit_toast_not_mute_all_audio">All audios enabled</string>
    <string name="tuiroomkit_mute_all_video">Stop Videos</string>
    <string name="tuiroomkit_dialog_mute_all_video_title">All and new members will be banned from video</string>
    <string name="tuiroomkit_dialog_mute_all_video_content">Members will not be able to open the video</string>
    <string name="tuiroomkit_not_mute_all_video">Start Videos</string>
    <string name="tuiroomkit_dialog_unmute_all_video_title">Unblock all banned videos</string>
    <string name="tuiroomkit_dialog_unmute_all_video_content">After deactivation, the user can freely start the video</string>
    <string name="tuiroomkit_dialog_unmute_all_confirm">Confirm release</string>
    <string name="tuiroomkit_toast_not_mute_all_video"> All videos enabled</string>
    <string name="tuiroomkit_kick_user_confirm">Are you sure you want to remove \"%s\"?</string>
    <string name="tuiroomkit_dialog_ok">OK</string>
    <string name="tuiroomkit_dialog_cancel">Cancel</string>
    <string name="tuiroomkit_tv_member_list">Members(%d)</string>
    <string name="tuiroomkit_confirm">Confirm</string>
    <string name="tuiroomkit_mute_audio_by_master">You have been muted</string>
    <string name="tuiroomkit_un_mute_audio_by_master">The moderator has unmuted you</string>
    <string name="tuiroomkit_mute_video_by_master">The room owner disabled your video.</string>
    <string name="tuiroomkit_un_mute_video_by_master">The room owner enabled your video.</string>
    <string name="tuiroomkit_title_collection_volume">Capture Volume</string>
    <string name="tuiroomkit_title_quality_check">Network Quality Monitoring</string>
    <string name="tuiroomkit_title_network">Network</string>
    <string name="tuiroomkit_title_network_delay">Latency</string>
    <string name="tuiroomkit_title_packet_loss_rate">Packet Loss Rate</string>
    <string name="tuiroomkit_title_trtc_statistics_audio">Audio</string>
    <string name="tuiroomkit_title_trtc_statistics_video">Video</string>
    <string name="tuiroomkit_title_bitrate">Bitrate</string>
    <string name="tuiroomkit_title_resolution">Resolution</string>
    <string name="tuiroomkit_title_frame_rate">Frame Rate</string>
    <string name="tuiroomkit_title_play_volume">Playback Volume</string>
    <string name="tuiroomkit_title_volume_reminder">Volume Reminder</string>
    <string name="tuiroomkit_title_audio_recording">Audio Recording</string>
    <string name="tuiroomkit_btn_start_recording">Start</string>
    <string name="tuiroomkit_toast_recording_file_path_copied">Recording file save path: %s</string>
    <string name="tuiroomkit_title_video">Video Settings</string>
    <string name="tuiroomkit_title_audio">Audio Settings</string>
    <string name="tuiroomkit_title_other_setting">Other Settings</string>
    <string name="tuiroomkit_title_sharing">Share</string>
    <string name="tuiroomkit_title_local_mirror">Local Mirror</string>
    <string name="tuiroomkit_title_enable">Enable</string>
    <string name="tuiroomkit_title_disable">Disable</string>
    <string name="tuiroomkit_btn_return">Back</string>
    <string name="tuiroomkit_tv_enable_audio">Enable Audio</string>
    <string name="tuiroomkit_tv_screen_capture">You are sharing your screen</string>
    <string name="tuiroomkit_tv_stop_screen_capture">Stop</string>
    <string name="tuiroomkit_tv_screen_recording">Screen Sharing</string>
    <string name="tuiroomkit_toast_need_floating_window_permission">Floating window permission is required</string>
    <string name="tuiroomkit_item_leave">exit</string>
    <string name="tuiroomkit_item_close_microphone">Mute</string>
    <string name="tuiroomkit_item_request_open_microphone">Ask to unmute</string>
    <string name="tuiroomkit_item_request_open_camera">Ask to start video</string>
    <string name="tuiroomkit_item_open_microphone">Unmute</string>
    <string name="tuiroomkit_item_open_camera">Start video</string>
    <string name="tuiroomkit_item_chat">Chat</string>
    <string name="tuiroomkit_item_member">Users(%d)</string>
    <string name="tuiroomkit_item_stage_control">Stage</string>
    <string name="tuiroomkit_item_invite">Invite</string>
    <string name="tuiroomkit_item_record">Record</string>
    <string name="tuiroomkit_item_float">Floating</string>
    <string name="tuiroomkit_item_expand">More</string>
    <string name="tuiroomkit_item_close">Close</string>
    <string name="tuiroomkit_setting_before_room">Setting before entering the room</string>
    <string name="tuiroomkit_room_id">Room ID</string>
    <string name="tuiroomkit_room_type">Room Type</string>
    <string name="tuiroomkit_room_free_speech">Free Speech conference</string>
    <string name="tuiroomkit_room_raise_hand">On-stage speaking conference</string>
    <string name="tuiroomkit_logout">Logout</string>
    <string name="tuiroomkit_kicked_off_line">You are already logged in elsewhere</string>
    <string name="tuiroomkit_dialog_logout_title">You are logged out</string>
    <string name="tuiroomkit_cancel">Cancel</string>
    <string name="tuiroomkit_microphone">Microphone</string>
    <string name="tuiroomkit_camera">Camera</string>
    <string name="tuiroomkit_meeting_title">%s\'s quick conference</string>
    <string name="tuiroomkit_meeting_invite_title">Invite Others</string>
    <string name="tuiroomkit_meeting_info_copy">Copy</string>
    <string name="tuiroomkit_master">Master</string>
    <string name="tuiroomkit_room_manager">Manager</string>
    <string name="tuiroomkit_room_link">Link</string>
    <string name="tuiroomkit_room_tips">You can share room number or link to invite more people to join the room</string>
    <string name="tuiroomkit_room_qr_code">Room QR code</string>
    <string name="tuiroomkit_room_qr_code_tip">Scan the code to enter the room</string>
    <string name="tuiroomkit_room_qr_code_save">Save into the album</string>
    <string name="tuiroomkit_copy_room_line_success">Room link copied successfully</string>
    <string name="tuiroomkit_get_image_failed">Failed to get image</string>
    <string name="tuiroomkit_save_image_failed">Failed to save image</string>
    <string name="tuiroomkit_save_image_success">Save the image successfully</string>
    <string name="tuiroomkit_permission_storage_reason_title">%s applies for access to the storage</string>
    <string name="tuiroomkit_permission_storage_reason">Need to access your storage permission, which is used for the multi-person audio and video room function after it is turned on, and your QR code can be saved to the phone only after it is turned on</string>
    <string name="tuiroomkit_tips_start_storage">Please turn on the storage permission first</string>
    <string name="tuiroomkit_hint_search_member">Search for participants</string>
    <string name="tuiroomkit_me">&#160;(Me)</string>
    <string name="tuiroomkit_forward_master_to">Make host</string>
    <string name="tuiroomkit_manager_add">Set as administrator</string>
    <string name="tuiroomkit_manager_remove">Remove administrator</string>
    <string name="tuiroomkit_mute_user">Disable chat</string>
    <string name="tuiroomkit_kick_out_of_room">Remove</string>
    <string name="tuiroomkit_ai_tool">AI</string>
    <string name="tuiroomkit_ai_speech_to_text_record">AI real-time meeting recording</string>
    <string name="tuiroomkit_ai_open_live_subtitle">Open AI real-time subtitles</string>
    <string name="tuiroomkit_ai_close_live_subtitle">Close AI real-time subtitles</string>
    <string name="tuiroomkit_ai_cat_live_record">View AI Live Meeting Recording</string>
    <string name="tuiroomkit_settings">Settings</string>
    <string name="tuiroomkit_advanced_settings">AdvancedSettings</string>
    <string name="tuiroomkit_beauty">Beauty</string>
    <string name="tuiroomkit_switch_layout">Switch layout</string>
    <string name="tuiroomkit_layout_grid">Grid layout</string>
    <string name="tuiroomkit_user_list_on_seat">Already on stage (%s)</string>
    <string name="tuiroomkit_user_list_off_seat">Not on stage (%s)</string>
    <string name="tuiroomkit_leave_room_tips">If you don\'t want to end the conference, \n please assign a new host before leaving the conference</string>
    <string name="tuiroomkit_leave_room">Leave Conference</string>
    <string name="tuiroomkit_finish_room">End Conference</string>
    <string name="tuiroomkit_enter_conference_password_title">Conference Password</string>
    <string name="tuiroomkit_please_input_conference_password">Please enter the password</string>
    <string name="tuiroomkit_join">Join</string>
    <string name="tuiroomkit_not_entered">Not entered(%s)</string>
    <string name="tuiroomkit_already_entered_room">Entered(%s)</string>
    <string name="tuiroomkit_tips">Tips</string>
    <string name="tuiroomkit_contact_us">Contact us</string>
</resources>