<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tuiroomkit_bg_bottom_dialog_black_portrait"
    android:orientation="vertical"
    android:paddingBottom="61dp">

    <View
        android:layout_width="24dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="12dp"
        android:background="@drawable/tuiroomkit_bottom_dialog_tip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_info_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tuiroomkit_meeting_title"
            android:textColor="@color/tuiroomkit_color_white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btn_qr_code"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@color/transparent"
            android:visibility="gone"
            android:src="@drawable/tuiroomkit_ic_qr_code" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_master_title"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/tuiroomkit_master"
            android:textColor="@color/tuiroomkit_color_info_title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_master"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:textColor="@color/tuiroomkit_color_white"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_type_title"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/tuiroomkit_room_type"
            android:textColor="@color/tuiroomkit_color_info_title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/tuiroomkit_room_free_speech"
            android:textColor="@color/tuiroomkit_color_white"
            android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_room_id_title"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/tuiroomkit_room_id"
            android:textColor="@color/tuiroomkit_color_info_title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_room_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@id/tv_room_id_title"
            android:textColor="@color/tuiroomkit_color_white"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/btn_copy_room_id"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:src="@drawable/tuiroomkit_ic_copy_white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_room_link_title"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/tuiroomkit_room_link"
            android:textColor="@color/tuiroomkit_color_info_title"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_room_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@id/tv_room_link_title"
            android:gravity="center_vertical"
            android:textColor="@color/tuiroomkit_color_white"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/btn_copy_room_link"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/transparent"
            android:src="@drawable/tuiroomkit_ic_copy_white" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_meeting_info_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:text="@string/tuiroomkit_room_tips"
        android:textColor="@color/tuiroomkit_color_info_title"
        android:textSize="12sp" />
</LinearLayout>