<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="323dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:background="@drawable/tuiroomkit_bg_base_dialog"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_conference_password_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:inputType="textMultiLine"
        android:textColor="@color/tuiroomkit_color_black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/tuiroomkit_enter_conference_password_title"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="18dp"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="14dp">

        <EditText
            android:id="@+id/et_conference_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:hint="@string/tuiroomkit_please_input_conference_password"
            android:inputType="textPassword"
            android:textColorHint="#99A2B2"
            android:textSize="16sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/tuiroomkit_bg_conference_password_edit"/>

        <ImageView
            android:id="@+id/img_clear_password"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="8dp"
            android:src="@drawable/tuiroomkit_clear_conference_password" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="24dp"
        android:background="#D5E0F2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel_input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/tuiroomkit_cancel"
            android:textAllCaps="false"
            android:textColor="#4F586B"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#D5E0F2" />

        <Button
            android:id="@+id/btn_confirm_input_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="@string/tuiroomkit_join"
            android:textAllCaps="false"
            android:textColor="@color/tuiroomkit_color_button_schedule_conference"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>
